# ConfigControl

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  design_decisions.md  docker-compose.yml  prometheus.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  cli.py  demo_client.py  main.py
app/api/: router.py
app/core/: container.py  logging.py  metrics.py  security.py  settings.py
app/db/: models.py  session.py
app/schemas/: audit.py  config.py  telemetry.py
app/sdk/: __init__.py  client.py
app/services/: cache.py  canary.py  config_service.py  event_bridge.py  notifications.py  telemetry.py  validation.py
docs/: architecture.md  design_decisions.md  failure_modes.md  interview_guide.md  platform_use_cases.md
examples/: payment-flags.schema.json  payment-flags.v1.json  payment-flags.v2.json  rate-limiter-policy.schema.json  rate-limiter-policy.v1.json  rate-limiter-policy.v2.json  recommendation-tuning.schema.json  recommendation-tuning.v1.json  recommendation-tuning.v2.json  timeout.schema.json  timeout.v1.json  timeout.v2.json
incident_reports/: canary_rollback.md  redis_outage.md
k8s/: api.yaml  namespace.yaml  postgres.yaml  redis.yaml
perf/: run_benchmarks.py  run_failure_scenarios.py
scripts/: demo-platform.sh  seed-demo.sh
tests/: conftest.py
tests/integration/: test_access_control.py  test_api.py  test_failure_modes.py
tests/unit/: test_cache.py  test_canary.py  test_canary_bucketing_matrix.py  test_cli.py  test_config_service_helpers.py  test_event_bridge.py  test_notifications.py  (+5 more)
